--- a/index.html
+++ b/index.html
@@ -42,16 +42,24 @@
 	    <h3>Teachers</h3>
 	    <div class="subsec_text">
 		<ul>
-			<li>Real-time feedback like never before - Teacher's now have qualitative and quantitative feedback points based on instant feedback from students.</li>
-			<li>Ridiculously easy user interface - Forget those stupid training sessions, this is so easy to use my grandmother can use it.</li>
-			<li>Integrates right into existing workflow - Hate going to a website? You can do it straight from outlook or your inbox.</li>
-			<li>Pre-built course websites</li>
+			<li>
+			    Real-time feedback like never before - Teacher's now have qualitative and quantitative feedback points based on instant feedback from students.
+			</li>
+			<li>
+			    Ridiculously easy user interface - Forget those stupid training sessions, this is so easy to use my grandmother can use it.
+			</li>
+			<li>
+			    Integrates right into existing workflow - Hate going to a website? You can do it straight from outlook or your inbox.
+			</li>
+			<li>
+			    Pre-built course websites
+			</li>
 		</ul>
 	    </div>
-	    <div style="height:220px;width:inherit;padding:0 0 0 0;background-color:white;color:black;">Image Here!</div>
+	    <img src="images/image2.png" alt="Another sample screenshot" />
 	</div>
 	<div class="column">
-	    <div style="height:220px; width:345px; padding:0 0 0 0;background-color:white; color:black;">Image Here!</div>
+	    <img src="images/image1.png" alt="A sample screenshot" />
 	    <h3>Students</h3>
 	    <div class="subsec_text">
 		<ul>
