modified html tags to support headlines/subtext

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	    <h3>Teachers</h3>
 	    <div class="subsec_text">
 		<ul>
-			<li>Real-time feedback like never before - Teacher's now have qualitative and quantitative feedback points based on instant feedback from students.</li>
-			<li>Ridiculously easy user interface - Forget those stupid training sessions, this is so easy to use my grandmother can use it.</li>
-			<li>Integrates right into existing workflow - Hate going to a website? You can do it straight from outlook or your inbox.</li>
+			<li><p class="headline">Real-time feedback like never before</p> <p class="subtext">Teacher's now have qualitative and quantitative feedback points based on instant feedback from students.</p></li>
+			<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it.</p></li>
+			<li><p class="headline">Integrates right into existing workflow</p> - <p class="subtet">Hate going to a website? You can do it straight from outlook or your inbox.</p></li>
 			<li>Pre-built course websites</li>
 		</ul>
 	    </div>
