styled the list

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css' />
+
 <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
@@ -44,8 +45,8 @@
 		<ul>
 			<li><p class="headline">Real-time feedback like never before</p> <p class="subtext">Teacher's now have qualitative and quantitative feedback points based on instant feedback from students.</p></li>
 			<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it.</p></li>
-			<li><p class="headline">Integrates right into existing workflow</p> - <p class="subtet">Hate going to a website? You can do it straight from outlook or your inbox.</p></li>
-			<li>Pre-built course websites</li>
+			<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">Hate going to a website? You can do it straight from outlook or your inbox.</p></li>
+			<li><p class="headline">Pre-built course websites</p></li>
 		</ul>
 	    </div>
 	    <img src="images/image2.png" alt="Another sample screenshot" />
@@ -55,10 +56,10 @@
 	    <h3>Students</h3>
 	    <div class="subsec_text">
 		<ul>
-			<li>streamlined announcement system - Centralizes a system for announcements with notifications so you're always up to date.</li>
-			<li>Integrated with mobile devices - Find the information you need to know wherever you are.</li>
-			<li>Study groups - Easily connect with your classmates with Facebook integration -- in a non creepy sort of way.</li>
-			<li>A completely new approach to classroom discussions focused around question ranking and tagging so you can find the right questions when you need to.</li>
+			<li><p class="headline">Streamlined announcement system</p><p class="subtext">Centralizes a system for announcements with notifications so you're always up to date.</p></li>
+			<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Find the information you need to know wherever you are.</p></li>
+			<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates with Facebook integration -- in a non creepy sort of way.</p></li>
+			<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around question ranking and tagging so you can find the right questions when you need to.</p></li>
 		</ul>
 	    </div>
 	</div>
