modified css, added wrapper

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="css/jquery.lightbox-0.5.css" media="screen" />
 <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css' />
 
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="style.css" /	>
 </head>
 
 <body>
@@ -37,59 +37,61 @@
     </div>
 </div>
 
-<div class="content">
-    <div id="what" class="section">
-	<h2><a name="what">What?</a></h2>
-	<div class="section_desc">
-	    CoursesIllinois lets teachers teach better and students work smarter with a streamlined announcement system, real-time feedback, and an efficient way to share materials. Your lives are stressful enough as it is. We save you both time and pain.
-	</div>
-	<div name="left_column" class="column">
-	    <h3>Teachers</h3>
-	    <div class="subsec_text">
-		<ul>
-			<li><p class="headline">Real-time feedback like never before</p> <p class="subtext">Teacher's now have qualitative and quantitative feedback points based on instant feedback from students.</p></li>
-			<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it.</p></li>
-			<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">Hate going to a website? You can do it straight from outlook or your inbox.</p></li>
-			<li><p class="headline">Pre-built course websites</p></li>
-		</ul>
+<div id="wrapper">
+	<div class="content">
+	    <div id="what" class="section">
+		<h2><a name="what">What?</a></h2>
+		<div class="section_desc">
+		    CoursesIllinois lets teachers teach better and students work smarter with a streamlined announcement system, real-time feedback, and an efficient way to share materials. Your lives are stressful enough as it is. We save you both time and pain.
+		</div>
+		<div name="left_column" class="column">
+		    <h3>Teachers</h3>
+		    <div class="subsec_text">
+			<ul>
+				<li><p class="headline">Real-time feedback like never before</p> <p class="subtext">Teachers now have real-time qualitative and quantitative feedback points such as average homework competition and student satisfaction.</p></li>
+				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it.</p></li>
+				<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">We get it, learning a new software is a pain. You make announcements straight from outlook or your inbox.</p></li>
+				<li><p class="headline">Pre-built course websites</p></li>
+			</ul>
+		    </div>
+		    <img src="images/image2.png" alt="Another sample screenshot" />
+		</div>
+		<div name="right_column" class="column">
+		    <a href="images/image1.png" class="lightbox">
+			<img src="images/image1.png" alt="A sample screenshot" />
+		    </a>
+		    <h3>Students</h3>
+		    <div class="subsec_text">
+			<ul>
+				<li><p class="headline">Streamlined announcement system</p><p class="subtext">Centralizes a system for announcements with notifications so you're always up to date.</p></li>
+				<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Find the information you need to know wherever you are.</p></li>
+				<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates with Facebook integration -- in a non creepy sort of way.</p></li>
+				<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around question ranking and tagging so you can find the right questions when you need to.</p></li>
+			</ul>
+		    </div>
+		</div>
 	    </div>
-	    <img src="images/image2.png" alt="Another sample screenshot" />
-	</div>
-	<div name="right_column" class="column">
-	    <a href="images/image1.png" class="lightbox">
-		<img src="images/image1.png" alt="A sample screenshot" />
-	    </a>
-	    <h3>Students</h3>
-	    <div class="subsec_text">
-		<ul>
-			<li><p class="headline">Streamlined announcement system</p><p class="subtext">Centralizes a system for announcements with notifications so you're always up to date.</p></li>
-			<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Find the information you need to know wherever you are.</p></li>
-			<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates with Facebook integration -- in a non creepy sort of way.</p></li>
-			<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around question ranking and tagging so you can find the right questions when you need to.</p></li>
-		</ul>
+	
+	    <div id="why" class="section">
+		<h2><a name="why">Why?</a></h2>
+		<div class="section_desc">
+		    The inspiration of our product came from the pain and frustrations of using existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that is built to last.
+		</div>
+	    </div>
+	
+	    <div id="who" class="section">
+		<h2><a name="who">Who?</a></h2>
+		<div class="section_desc">
+		    CoursesIllinois is currently being built by talented students with the guidance and instruction of expert faculty members.
+		</div>
 	    </div>
 	</div>
-    </div>
-
-    <div id="why" class="section">
-	<h2><a name="why">Why?</a></h2>
-	<div class="section_desc">
-	    The inspiration of our product came from the pain and frustrations of using existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that is built to last.
+	
+	<div class="footer">
+	    &nbsp;
+	    <span style="color:black;">Throw a footer in here?</span>
+	    &nbsp;
 	</div>
-    </div>
-
-    <div id="who" class="section">
-	<h2><a name="who">Who?</a></h2>
-	<div class="section_desc">
-	    CoursesIllinois is currently being built by talented students with the guidance and instruction of expert faculty members.
-	</div>
-    </div>
-</div>
-
-<div class="footer">
-    &nbsp;
-    <span style="color:black;">Throw a footer in here?</span>
-    &nbsp;
 </div>
 
 <!-- script to add lightboxes -->
