--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
 				<li><p class="headline">Pre-built course websites</p></li>
 			</ul>
 		    </div>
+		<a rel="lightbox" href="images/dashboardView.png" class="lightbox">	
 		    <img src="images/image2.png" alt="Another sample screenshot" />
+		</a>
 		</div>
 		<div name="right_column" class="column">
-		    <a href="images/image1.png" class="lightbox">
+		    <a rel="lightbox" href="images/teacherstats.png" class="lightbox">
 			<img src="images/image1.png" alt="A sample screenshot" />
 		    </a>
 		    <h3>Students</h3>
@@ -98,9 +100,9 @@
 </div>
 
 <!-- script to add lightboxes -->
-<script type="text/javascript">
+<!--<script type="text/javascript">
 $('a.lightbox').lightBox();
-</script>
+</script>-->
 
 </body>
 </html>
