Added some more visua tweaks

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 	    <div id="what" class="section">
 		<h2><a name="what">What?</a></h2>
 		<div class="section_desc">
-		    CoursesIllinois lets teachers teach better and students work smarter with a streamlined announcement system, real-time feedback, and an efficient way to share materials. Your lives are stressful enough as it is. We save you both time and pain.
+		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. With CoursesIllinois, there are no headaches or roadblocks getting in the way of what you need done.
 		</div>
 		<div name="left_column" class="column">
 		    <h3>Teachers</h3>
 		    <div class="subsec_text">
 			<ul>
-				<li><p class="headline">Real-time feedback like never before</p> <p class="subtext">Teachers now have real-time qualitative and quantitative feedback points such as average homework competition and student satisfaction.</p></li>
-				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it.</p></li>
-				<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">We get it, learning a new software is a pain. You make announcements straight from outlook or your inbox.</p></li>
-				<li><p class="headline">Pre-built course websites</p></li>
+				<li><p class="headline">Real-Time Feedback</p><p class="subtext">With real-time feedback charts such as average homework completion times and student satisfaction polls, instantaneous evaluation and adaptation has never been easier.</p> </li>
+				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it. Clear charts and tabs make site navigation a breeze ensuring you don't have to dig around for what you need.</p></li>
+				<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">We know change sucks, so our plugins let you make announcements straight from Outlook or your inbox.</p></li>
+				<li><p class="headline">Pre-built course websites</p><p class="subtext">Consistency and easy set up allows for more time spent planning the curriculum than building a website.</p> </li>
 			</ul>
 		    </div>
 		<a rel="lightbox" href="images/dashboardView.png" class="lightbox">	
@@ -68,10 +68,10 @@
 		    <h3>Students</h3>
 		    <div class="subsec_text">
 			<ul>
-				<li><p class="headline">Streamlined announcement system</p><p class="subtext">Centralizes a system for announcements with notifications so you're always up to date.</p></li>
-				<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Find the information you need to know wherever you are.</p></li>
-				<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates with Facebook integration -- in a non creepy sort of way.</p></li>
-				<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around question ranking and tagging so you can find the right questions when you need to.</p></li>
+				<li><p class="headline">Streamlined announcement system</p><p class="subtext">Centralizes a system for announcements with notifications so you're always up to date. A visually appealing homepage allows for students to stay connected and current with the progression of their courses.</p></li>
+				<li><p class="headline">Integrated with mobile devices</p><p class="subtext">Find the information you need to know wherever you are and whenever you want it. Students can remain connected, even away from the computer. </p></li>
+				<li><p class="headline">Study groups</p><p class="subtext">Easily connect with your classmates to set up study sessions to collaborate with each other. Works with Facebook integration so we can find your friends-- in a non creepy sort of way.</p></li>
+				<li><p class="headline">Discussions</p><p class="subtext">A completely new approach to classroom discussions focused around question ranking and tagging so you can find the right questions when you need to. Students can "upvote" questions so instructors can address the most popular ones first. </p></li>
 			</ul>
 		    </div>
 		</div>
@@ -80,14 +80,14 @@
 	    <div id="why" class="section">
 		<h2><a name="why">Why?</a></h2>
 		<div class="section_desc">
-		    The inspiration of our product came from the pain and frustrations of using existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that is built to last.
+		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that solves these problems, and then some.
 		</div>
 	    </div>
 	
 	    <div id="who" class="section">
 		<h2><a name="who">Who?</a></h2>
 		<div class="section_desc">
-		    CoursesIllinois is currently being built by talented students with the guidance and instruction of expert faculty members.
+		   CoursesIllinois is currently being built by talented students under the guidance of accomplished faculty members and emerging innovative leaders.
 		</div>
 	    </div>
 	</div>
