Moved style.css into css folder.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="js/scriptaculous.js?load=effects,builder"></script>
 <script type="text/javascript" src="js/lightbox.js"></script>
 <link rel="stylesheet" href="css/lightbox.css" type="text/css" media="screen" />
-<link rel="stylesheet" type="text/css" href="style.css" /	>
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
