Added the fix to get the close button working in chrome.

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 				<li><p class="headline">Pre-built course websites</p><p class="subtext">Consistency and easy set up allows for more time spent planning the curriculum than building a website.</p> </li>
 			</ul>
 		    </div>
-		<a rel="lightbox" href="images/dashboardView.png" class="lightbox">	
+		<a rel="lightbox" href="images/dashboardView.png">	
 		    <img src="images/image2.png" alt="Another sample screenshot" />
 		</a>
 		</div>
 		<div name="right_column" class="column">
-		    <a rel="lightbox" href="images/teacherstats.png" class="lightbox">
+		    <a rel="lightbox" href="images/teacherstats.png">
 			<img src="images/image1.png" alt="A sample screenshot" />
 		    </a>
 		    <h3>Students</h3>
