Added image placeholders under "Why?" section.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 		<div class="section_desc">
 		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that solves these problems, and then some.
 		</div>
+		<img src="" alt="Insert image here!" style="height:220px; width:345px; margin-right:20px;"/>
+		<img src="" alt="Insert image here!" style="height:220px; width:345px;"/>
 	    </div>
 	
 	    <div id="who" class="section">
@@ -95,11 +97,6 @@
 	<div class="footer">
 	</div>
 </div>
-
-<!-- script to add lightboxes -->
-<!--<script type="text/javascript">
-$('a.lightbox').lightBox();
-</script>-->
 
 </body>
 </html>
