Added new images, updated old ones, uploaded a pattern background image

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
 			</ul>
 		    </div>
 		</div>
-	    </div>
+	    </div><h2><a name="why">Mobile Prototype</a></h2>
 	<object width="480" height="385"><param name="movie" value="http://www.youtube.com/v/5PWTlUTprr8?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/5PWTlUTprr8?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="480" height="385"></embed></object>
 	    <div id="why" class="section">
 		<h2><a name="why">Why?</a></h2>
 		<div class="section_desc">
-		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that solves these problems, and then some.
+		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that solves these problems, and then some. Students have been forced to deal with a flawed system which was designed with student input largely ignored. School work is difficult as is. Minimizing functionality errors like the ones shown below can enable students to be smarter and more efficient workers.
 		</div>
-		<img src="" alt="Insert image here!" style="height:220px; width:345px; margin-right:20px;"/>
-		<img src="" alt="Insert image here!" style="height:220px; width:345px;"/>
+		<a rel="lightbox" href="images/feedback1.png"><img src="images/feedback1_sm.png" alt="Insert image here!" style="height:220px; width:345px; margin-right:20px;"/></a>
+		<a rel="lightbox" href="images/feedback2.png"><img src="images/feedback2_sm.png" alt="Insert image here!" style="height:220px; width:345px;"/></a>
 	    </div>
 	
 	    <div id="who" class="section">
