added a jobs link and made pattern repeating

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 	    <div id="who" class="section">
 		<h2><a name="who">Who?</a></h2>
 		<div class="section_desc">
-		   CoursesIllinois is currently being built by talented students under the guidance of accomplished faculty members and emerging innovative leaders.
+		   CoursesIllinois is currently being built by talented students under the guidance of accomplished faculty members and emerging innovative leaders. 
+		<br /><br />Get involved. <a href="mailto:jobs@coursesillinois.com">Send us an email</a>.
 		</div>
 	    </div>
 	</div>
