--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <script type="text/javascript" src="js/lightbox.js"></script>
     <link rel="stylesheet" href="css/lightbox.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+	<script type="text/javascript">
+		// Google analytics script
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-20351006-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
+
 </head>
 
 <body>
@@ -45,7 +59,7 @@
 	    <div id="what" class="section">
 		<h2><a name="what">What?</a></h2>
 		<div class="section_desc">
-		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. With CoursesIllinois, there are no headaches or roadblocks getting in the way of what you need done.
+		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. <br /><br />CoursesIllinois is an alternative to Illinois Compass that doesn't suck.
 		</div>
 		<div name="left_column" class="column">
 		    <h3>Teachers</h3>
@@ -80,7 +94,7 @@
 	    <div id="why" class="section">
 		<h2><a name="why">Why?</a></h2>
 		<div class="section_desc">
-		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that solves these problems, and then some. Students have been forced to deal with a flawed system which was designed with student input largely ignored. School work is difficult as is. Minimizing functionality errors like the ones shown below can enable students to be smarter and more efficient workers.
+		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We want to build a brand new innovative system that solves these problems, and then some.<br /><br /> Students have been forced to deal with a flawed system which was designed with student input largely ignored. School work is difficult as is. Minimizing functionality errors like the ones shown below can enable students to be smarter and more efficient workers.
 		</div>
 		<a rel="lightbox" href="images/feedback1.png"><img src="images/feedback1_sm.png" alt="Insert image here!" style="height:220px; width:345px; margin-right:20px;"/></a>
 		<a rel="lightbox" href="images/feedback2.png"><img src="images/feedback2_sm.png" alt="Insert image here!" style="height:220px; width:345px;"/></a>
@@ -89,8 +103,8 @@
 	    <div id="who" class="section">
 		<h2><a name="who">Who?</a></h2>
 		<div class="section_desc">
-		   CoursesIllinois is currently being built by talented students under the guidance of accomplished faculty members and emerging innovative leaders. 
-		<br /><br />Get involved. <a href="mailto:jobs@coursesillinois.com">Send us an email</a>.
+		   CoursesIllinois is currently being built by talented students under the guidance of accomplished faculty members and emerging leaders in education software. 
+		<br /><br />Get involved. <a href="mailto:hello@coursesillinois.com">hello@CoursesIllinois.com</a>.
 		</div>
 	    </div>
 	</div>
