slight content modifications

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<title>CoursesIllinois - Lemelson-MIT Application</title>
     <!--<script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery.lightbox-0.5.js"></script>
 
@@ -59,14 +60,14 @@
 	    <div id="what" class="section">
 		<h2><a name="what">What?</a></h2>
 		<div class="section_desc">
-		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. <br /><br />CoursesIllinois is an alternative to Illinois Compass that doesn't suck.
+		    CoursesIllinois lets teachers teach better and students work smarter. With a streamlined announcement system, real-time feedback, and an efficient way to share materials all centralized on one website, they can do just that. Your lives are stressful enough as it is. <br /><br /><p>CoursesIllinois is an alternative to Illinois Compass that doesn't suck.</p>
 		</div>
 		<div name="left_column" class="column">
 		    <h3>Teachers</h3>
 		    <div class="subsec_text">
 			<ul>
 				<li><p class="headline">Real-Time Feedback</p><p class="subtext">With real-time feedback charts such as average homework completion times and student satisfaction polls, instantaneous evaluation and adaptation has never been easier.</p> </li>
-				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it. Clear charts and tabs make site navigation a breeze ensuring you don't have to dig around for what you need.</p></li>
+				<li><p class="headline">Ridiculously easy user interface</p><p class="subtext">Forget those stupid training sessions, this is so easy to use my grandmother can use it. Clear charts and tabs make site navigation a breeze. You don't have to dig around for what you need.</p></li>
 				<li><p class="headline">Integrates right into existing workflow</p><p class="subtext">We know change sucks, so our plugins let you make announcements straight from Outlook or your inbox.</p></li>
 				<li><p class="headline">Pre-built course websites</p><p class="subtext">Consistency and easy set up allows for more time spent planning the curriculum than building a website.</p> </li>
 			</ul>
