added hover effects to images

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	    <div id="why" class="section">
 		<h2><a name="why">Why?</a></h2>
 		<div class="section_desc">
-		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We asked students if they had the same problems. Check out what they wrote in 24 hours below. Minimizing functionality errors like the ones shown below can enable students to be smarter and more efficient workers.<br /><br /> <p>We want to build a brand new innovative system that solves these problems, and then some.</p>
+		   The inspiration of our product came from the pain and frustrations many users experience with the existing management systems. Information about classes are fragmented, disorganized, and difficult to find. We asked students if they had the same problems. Check out what they wrote in 24 hours below.<br /><br /> <p>We want to build a brand new innovative system that solves these problems, and then some.</p>
 		</div>
 		<a rel="lightbox" href="images/feedback1.png"><img src="images/feedback1_sm.png" alt="Insert image here!" style="height:220px; width:345px; margin-right:20px;"/></a>
 		<a rel="lightbox" href="images/feedback2.png"><img src="images/feedback2_sm.png" alt="Insert image here!" style="height:220px; width:345px;"/></a>
