er.. I dont remember

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="js/scriptaculous.js?load=effects,builder"></script>
     <script type="text/javascript" src="js/lightbox.js"></script>
     <link rel="stylesheet" href="css/lightbox.css" type="text/css" media="screen" />
+	<script type='text/javascript' src='/javascripts/jquery.tipsy.js'></script>
+	<link rel="stylesheet" href="/stylesheets/tipsy.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 	<script type="text/javascript">
 		// Google analytics script
